<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProBeach</string>
    <string name="code_name">probeach</string>
    <string name="add_note">Add Note</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="amount_label">Amount:</string>
    <string name="barcode_text">Place a barcode inside the viewfinder rectangle to scan it</string>
    <string name="branch_call_title">Which branch would you like to call?</string>
    <string name="branch_directions_title">Which location would you like directions to?</string>
    <string name="calculate">Calculate</string>
    <string name="call_us">Call us</string>
    <string name="cancel">Cancel</string>
    <string name="cart_is_empty">Your cart is Empty</string>
    <string name="checkin">Check In</string>
    <string name="checking_unsuccess">You need to get closer to the location marked.</string>
    <string name="checking_more">Checkin more for a coupon!</string>
    <string name="check_out_app">Check out this app:</string>
    <string name="checkin_coupon">You need to check in another %d times before you can use this coupon</string>
    <string name="checkin_interval">You need to wait before you can check in again. Check-in interval is %d hours</string>
    <string name="choose_photo">Choose photo</string>
    <string name="chose_from_library">From Library</string>
    <string name="choose_login_account">Choose Login Account</string>
    <string name="choose_action">Choose action</string>
    <string name="comments">Comments</string>
    <string name="comment_adding_failure">Failure occurs while adding comment. Please try again later</string>
    <string name="comment_clear">Clear</string>
    <string name="comment_cancel">Cancel</string>
    <string name="comment_post">Post</string>
    <string name="comment_must_fill">Comment must be filled</string>
    <string name="coupons_description_format">You need to check in another %s times before you can use this coupon</string>
    <string name="comment_successfully_added">Your comment has been added!</string>
    <string name="data_loading_failure">Data loading failure. Please retry later</string>
    <string name="delete_note">Delete Note ?</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="demo_title">Enter the code you have been given below to view a demo</string>
    <string name="disclaimer_label">These figures are only a guide. We recommend that you obtain exact figures from a specific lender before commiting to any loan.</string>
    <string name="display_scanned_code">The app will display the scanned code.</string>
    <string name="direction_label">We Are Here</string>
    <string name="directions">Directions</string>
    <string name="each_month_payment">Your monthly repayment should be:</string>
    <string name="email">Email</string>
    <string name="email_body_format">"I've been using the %s Android app and I think you should take a look!"</string>
    <string name="email_photo_title">Send us a photo</string>
    <string name="email_subject_format">%s Android App</string>
    <string name="email_results">Email Results</string>
    <string name="email_us">Email Us</string>
    <string name="error">Error</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_sharing_successful">Link was shared successfully via facebook</string>
    <string name="facebook_login_failure">Facebook login failure. Please try again later</string>
    <string name="field_not_filled_message">All fields need to be filled</string>
    <string name="find_qr_code">Find a QR code?</string>
    <string name="find_qr_code_for_app">Find a QR code for this app.</string>
    <string name="finding_your_location">Finding your location...</string>
    <string name="gps_disabled_info">Your GPS seems to be disabled. Do you want to enable it?</string>
    <string name="have_unlocked_coupon">You have unlocked a new coupon!</string>
    <string name="have_good_lighting">Make sure you have good lighting.</string>
    <string name="help">Help</string>
    <string name="incorrect_email_message">Your email has incorrect format</string>
    <string name="interest_rate">Interest rate:</string>
    <string name="in_stock">In Stock</string>
    <string name="join">Join</string>
    <string name="join_our_mailing_list">Join Our Mailing List</string>
    <string name="line_up_camera_view">Line up the camera view finder on the code.</string>
    <string name="location_cannot_shown">Location can not be shown.</string>
    <string name="location_absent">"Sorry, you can not check-in, because your location wasn't defined yet. Please try again later"</string>
    <string name="loading">Please wait while data is loading...</string>
    <string name="load_demo_notification">Please enter application code</string>
    <string name="load_demo">Load Demo</string>
    <string name="loan_term">Loan term:</string>
    <string name="loan_amount">Loan amount:</string>
    <string name="loyalty_dialog_title">SECRET CODE</string>
    <string name="loyalty_dialog_message">Please hand your device to the business representative who will stamp your card</string>
    <string name="loyalty_dialog_yes_title">Stamp</string>
    <string name="loyalty_wrong_code_message">Secret code is wrong</string>
    <string name="loyalty_congrats_message">Congrats! Now you can get %s</string>
    <string name="loyalty_warning_message">"You've to stamp all the numbers before you can stamp the freebie square"</string>
    <string name="mailing_list">Mailing List</string>
    <string name="mailing_list_add_failure">There was a problem to sign up. Please try again later</string>
    <string name="mailing_list_add_success">You have been added to our mailing list. Thanks!</string>
    <string name="mailing_list_question">Would you like to join our mailing list for exclusive updates?</string>
    <string name="mailing_list_title">Sign up for our newsletter</string>
    <string name="more">More</string>
    <string name="more_info">More info</string>
    <string name="my_note_email_title">My Note!</string>
    <string name="name">Name</string>
    <string name="need_help">Need some help?</string>
    <string name="no">No</string>
    <string name="n_miles_from_location">%.2f miles from location</string>
    <string name="n_feet_from_location">%.2f feet from location</string>
    <string name="number_incorrect_format_message">You entered incorrect number(s)</string>
    <string name="ok">Ok</string>
    <string name="online_price">Online Price</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="payment_transaction_successful">Payment Transaction Successful</string>
    <string name="people_label">Number of People:</string>
    <string name="percent">%</string>
    <string name="percent_notice">(enter 10% as 10)</string>
    <string name="play">Play</string>
    <string name="post_review">Post Review</string>
    <string name="price">Price</string>
    <string name="product_image">Product Image</string>
    <string name="product_is_added">Product is added to Cart</string>
    <string name="push_notification_coming">New Message!</string>
    <string name="push_notifications_coming">New Messages!</string>
    <string name="qr_unsuccess_scanning">You need to scan another qr code.</string>
    <string name="rating">Rating</string>
    <string name="read_reviews">Read Reviews</string>
    <string name="record">Record</string>
    <string name="redeem">Redeem</string>
    <string name="redeem_coupon">Are you sure you want to redeem this coupon?</string>
    <string name="redeemed">REDEEMED!</string>
    <string name="refresh">Refresh</string>
    <string name="remove">Remove</string>
    <string name="reset">Reset</string>
    <string name="scan_qr">Scan QR</string>
    <string name="scan_code_description">Scan the code with QR scanner and get linked directly to content or unlock hidden items.</string>
    <string name="scan_qr_code">Scan a QR code</string>
    <string name="sdcard_missed">"Sorry, but you don't have sdcard for the photo"</string>
    <string name="search">Search</string>
    <string name="select_image">Select image</string>
    <string name="send">Send</string>
    <string name="send_email">Send mail...</string>
    <string name="server_connection_failure">Server connection failure. Please check your connection and try again</string>
    <string name="subtotal">Subtotal</string>
    <string name="share">Share</string>
    <string name="share_coupon_info">"I've just checked into %s using their mobile app, check it out!"</string>
    <string name="share_item">Share Item</string>
    <string name="share_by_email">Share by Email</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="stop">Stop</string>
    <string name="success">Success</string>
    <string name="successfull_coupon_redeem">You redeemed coupon successfully</string>
    <string name="take_photo">Take a Photo</string>
    <string name="tax">Tax</string>
    <string name="tell_friend">Tell Friend</string>
    <string name="tip_pay_label">Each person should pay:</string>
    <string name="tip_percent_label">Tip Percentage:</string>
    <string name="today">Today</string>
    <string name="total_items">Total Items</string>
    <string name="total">Total</string>
    <string name="to">to</string>
    <string name="twitter">Twitter</string>
    <string name="twitting_failure">Failure occurs while tweeting</string>
    <string name="twitting_successful">Tweeting was successful</string>
    <string name="twitter_login_failure">Twitter login failure. Please try again later</string>
    <string name="unlocked">Unlocked!</string>
    <string name="update">Update</string>
    <string name="view_map">View Map</string>
    <string name="view_website">View Website</string>
    <string name="waiting">Waiting...</string>
    <string name="wait_for_camera">Wait for the camera to detect the code.</string>
    <string name="wait_till_images_loading">Images loading can take some minutes. Please wait</string>
    <string name="wait_to_checkin">You need to wait before you can check in again</string>
    <string name="years">years</string>
    <string name="yes">Yes</string>
    <string name="your_location">Your location</string>
</resources>
