<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/mortgage_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/tab_title_bar" />
    <TableLayout android:id="@id/table_layout" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:stretchColumns="0,1">
        <TableRow>
            <TextView android:id="@id/amount_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loan_amount" style="@style/BigBlackBoldText" />
            <EditText android:textSize="13.0sp" android:gravity="center|right" android:id="@id/amount_text" android:layout_width="100.0dip" android:layout_height="40.0dip" android:inputType="numberDecimal" />
        </TableRow>
        <TableRow>
            <TextView android:id="@id/term_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loan_term" style="@style/BigBlackBoldText" />
            <EditText android:textSize="13.0sp" android:gravity="center|right" android:id="@id/term_text" android:layout_width="100.0dip" android:layout_height="40.0dip" android:inputType="numberDecimal" />
            <TextView android:textColor="#ff000000" android:layout_width="35.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/years" />
        </TableRow>
        <TableRow>
            <TextView android:id="@id/rate_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/interest_rate" style="@style/BigBlackBoldText" />
            <EditText android:textSize="13.0sp" android:gravity="center|right" android:id="@id/rate_text" android:layout_width="100.0dip" android:layout_height="40.0dip" android:text="" android:inputType="numberDecimal" />
            <TextView android:textColor="#ff000000" android:layout_width="35.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/percent" />
        </TableRow>
        <TableRow>
            <TextView android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/percent_notice" />
        </TableRow>
    </TableLayout>
    <Button android:id="@id/calculate_button" android:layout_width="140.0dip" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:text="@string/calculate" style="@style/BigBlackBoldText" />
    <TextView android:id="@id/each_month_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/each_month_payment" style="@style/BigBlackBoldText" />
    <TextView android:id="@id/each_month_text" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_marginTop="10.0dip" style="@style/BigBlackBoldText" />
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff000000" android:gravity="center_horizontal" android:id="@id/disclaimer_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/disclaimer_label" />
</LinearLayout>