<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:layout_gravity="center_horizontal" android:id="@id/take_photo_button" android:background="@drawable/button_light_gray_src" android:layout_width="160.0dip" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:text="@string/take_photo" style="@style/BigBlackBoldText" />
        <Button android:layout_gravity="center_horizontal" android:id="@id/chose_from_library_button" android:background="@drawable/button_light_gray_src" android:layout_width="160.0dip" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:text="@string/chose_from_library" style="@style/BigBlackBoldText" />
        <Button android:layout_gravity="center_horizontal" android:id="@id/email_photo_cancel" android:background="@drawable/button_light_gray_src" android:layout_width="160.0dip" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/cancel" style="@style/BigBlackBoldText" />
    </LinearLayout>
</ScrollView>