<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/tab_title_bar" />
    <LinearLayout android:id="@id/contact_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ScrollView android:orientation="vertical" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:gravity="center_horizontal" android:id="@id/title_label" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" style="@style/BigBlackBoldText" />
                <Button android:id="@id/view_map_button" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/view_map" />
                <Button android:id="@id/call_us_button" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/call_us" />
                <Button android:id="@id/view_website_button" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/view_website" />
                <Button android:id="@id/email_us_button" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/email_us" />
                <TextView android:textStyle="bold" android:textColor="#ff000000" android:id="@id/opening_times_header_label" android:padding="8.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opening_hours" />
                <TableLayout android:id="@id/opening_times_layout" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:stretchColumns="0,1" />
                <WebView android:id="@id/contact_comment_text" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" style="@style/BigBlackBoldText" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>