<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/tab_title_bar" />
    <LinearLayout android:orientation="vertical" android:id="@id/mailing_list_root" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/mailing_list_title" style="@style/BigBlackBoldText" />
        <TableLayout android:id="@id/table_layout" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:stretchColumns="0,1">
            <TableRow>
                <TextView android:id="@id/user_name_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" style="@style/BigBlackBoldText" />
                <EditText android:textSize="13.0sp" android:gravity="center|right" android:id="@id/user_name_text" android:layout_width="140.0dip" android:layout_height="40.0dip" />
            </TableRow>
            <TableRow>
                <TextView android:id="@id/user_email_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email" style="@style/BigBlackBoldText" />
                <EditText android:textSize="13.0sp" android:gravity="center|right" android:id="@id/user_email_text" android:layout_width="140.0dip" android:layout_height="40.0dip" />
            </TableRow>
        </TableLayout>
        <Button android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/join_button" android:layout_width="wrap_content" android:layout_height="53.0dip" android:layout_marginTop="20.0dip" android:text="@string/join" style="@style/BigBlackBoldText" />
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/mailing_list_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" style="@style/BigBlackBoldText" />
    </LinearLayout>
</LinearLayout>