<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textColor="#ff000000" android:gravity="top" android:id="@id/comment_edit_text" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="7.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="7.0dip" android:singleLine="true" android:layout_weight="1.0" android:imeOptions="actionDone" />
    <RelativeLayout android:gravity="center_vertical" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="90.0dip">
        <Button android:textColor="#ffffffff" android:id="@id/comments_cancel" android:background="@drawable/button_blue_src" android:layout_width="90.0dip" android:layout_height="45.0dip" android:layout_marginLeft="7.0dip" android:text="@string/comment_cancel" android:layout_alignParentLeft="true" />
        <Button android:textColor="#ffffffff" android:id="@id/comments_clear" android:background="@drawable/button_blue_src" android:layout_width="90.0dip" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:text="@string/comment_clear" android:layout_toRightOf="@id/comments_cancel" />
        <Button android:textColor="#ffffffff" android:id="@id/comments_post" android:background="@drawable/button_blue_src" android:layout_width="90.0dip" android:layout_height="45.0dip" android:layout_marginRight="7.0dip" android:text="@string/comment_post" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>