<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/tab_title_bar" />
    <LinearLayout android:orientation="vertical" android:id="@id/voice_recording_root" android:background="#ff97b5ec" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center_horizontal" android:background="@drawable/soundbar_plate_mono" android:layout_width="313.0dip" android:layout_height="158.0dip" android:layout_marginTop="40.0dip" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center_horizontal" android:id="@id/voice_recording_description" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="7.0dip" android:layout_marginTop="30.0dip" android:layout_weight="1.0" />
        <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@id/voice_recording_buttons_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:layout_gravity="center_vertical" android:id="@id/record_button" android:layout_width="100.0dip" android:layout_margin="7.0dip" android:text="@string/record" android:layout_weight="1.0" style="@style/CommonButtonStyle" />
            <Button android:layout_gravity="center_vertical" android:id="@id/send_email_button" android:layout_width="100.0dip" android:layout_margin="7.0dip" android:text="@string/send" android:layout_weight="1.0" style="@style/CommonButtonStyle" />
            <Button android:layout_gravity="center_vertical" android:id="@id/play_button" android:layout_width="100.0dip" android:layout_margin="7.0dip" android:text="@string/play" android:layout_weight="1.0" style="@style/CommonButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>